--- a/MvcTechdaysBlog/Views/Shared/EditorTemplates/MultilineText.cshtml
+++ b/MvcTechdaysBlog/Views/Shared/EditorTemplates/MultilineText.cshtml
@@ -1,2 +1,2 @@
 ﻿@model String
-@Html.TextArea("", Model, new { @style = "width: 500px; height: 100px;" })
+@Html.TextAreaFor(model => model, new { @style = "width: 500px; height: 100px;" })
