--- a/MvcTechdaysBlog/Views/Shared/EditorTemplates/String.cshtml
+++ b/MvcTechdaysBlog/Views/Shared/EditorTemplates/String.cshtml
@@ -1,2 +1,2 @@
 ﻿@model String
-@Html.TextBox("", Model, new { @style = "width: 500px;" })
+@Html.TextBoxFor(model => model, new { @style = "width: 500px;" })
