--- a/MvcTechdaysBlog/Views/Shared/_Layout.cshtml
+++ b/MvcTechdaysBlog/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <a href="/">Home</a>
                     @if (User.Identity.IsAuthenticated)
                     {
+                        @Html.ActionLink("Admin", "Index", "Article", new { Area = "Admin" }, null)
                         @Html.ActionLink("Log off", "LogOff", "Account")
                     }
                 </div>
