--- a/MvcTechdaysBlog/Views/Account/LogOn.cshtml
+++ b/MvcTechdaysBlog/Views/Account/LogOn.cshtml
@@ -1,4 +1,5 @@
-﻿@model MvcTechdaysBlog.Areas.Admin.Models.LogOnViewModel
+﻿@using MvcTechdaysBlog.Models
+@model LogOnViewModel
 
 @{
     ViewBag.Title = "LogOn";
